--- a/index.html
+++ b/index.html
@@ -1,69 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset=utf-8>
-<meta name="viewport" content="width=620">
-<title>HTML5 Demo: getUserMedia streamed to a video element</title>
-<link rel="stylesheet" href="css/html5demos.css">
-<script src="//www.parsecdn.com/js/parse-1.3.3.min.js"></script>
+  <meta charset=utf-8>
+  <title>Rush Sign Up</title>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/gum.css">
+  <script src="//www.parsecdn.com/js/parse-1.3.3.min.js"></script>
 </head>
 <body>
-<section id="wrapper">
-<div id="carbonads-container">
-  <div class="carbonad">
-    <div id="azcarbon">
-      
-    </div>
-    <script type="text/javascript">var z = document.createElement("script"); z.type = "text/javascript"; z.async = true; z.src = "http://engine.carbonads.com/z/14060/azcarbon_2_1_0_VERT"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(z, s);</script>
-    </div>
-    </div>
 
+<h1 class="text-center">Phi Psi Rush Signup</h1>
 
-<style>
-  audio, video {
-    max-width: 100%;
-    margin: 0;
-  }
-
-  video,
-  .supported audio { 
-    width: 100%;
-    /* I'm using CSS3 to translate the video on the X axis to give it a mirror effect */
-    -webkit-transform: rotateY(180deg) rotate3d(1, 0, 0, 0deg); 
-    -o-transform: rotateY(180deg) rotate3d(1, 0, 0, 0deg); 
-    -moz-transform: rotateY(180deg) rotate3d(1, 0, 0, 0deg); 
-    -ms-transform: rotateY(180deg) rotate3d(1, 0, 0, 0deg); 
-    transform: rotateY(180deg) rotate3d(1, 0, 0, 0deg); 
-  }
-  #gum {
-    background: #c00;
-    color: #fff;
-    padding: 10px;
-  }
-</style>
-<article>
   <form id="info">
-    <input type="text" id="signup-name" placeholder="name" />
-    <input type="text" id="signup-email" placeholder="email" />
+    <div class="row">
+      <div class="large-12 columns">
+        <label>
+          Name:
+          <input type="text" id="name" placeholder="Name" />
+        </label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="large-12 columns">
+        <label>
+          Email:
+          <input type="text" id="email" placeholder="Email" />
+        </label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="large-12 columns">
+        <label>
+          Hometown:
+          <input type="text" id="hometown" placeholder="Hometown" />
+        </label>
+      </div>
+    </div>
   </form>
-  <video id="video" muted loop autoplay>
 
-  </video>
-  <button id="snap">Snap Photo</button>
-  <canvas id="canvas" width="640" height="480"></canvas>
-</article>
-<script src="js/gum.js"></script>
-<script>
-var article = video.parentNode,
-    gum = document.getElementById('gum');
+  <div class="row">
+    <div class="small-6 columns">
+      <video id="video" muted loop autoplay></video>
+    </div>
+    <div class="small-6 columns">
+      <canvas id="canvas" width="640" height="480"></canvas>
+    </div>
+  </div>
 
-if (navigator.getUserMedia) {
-  article.removeChild(gum);
-  article.className = 'supported';
-}
-</script>
+  <div class="row text-center">
+    <div class="medium-12 columns">
+      <button id="snap">Snap Photo</button>
+    </div>
+  </div>
 
-</section>
+  <script src="js/gum.js"></script>
 
 </body>
 </html>
