--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1 class="text-center">Phi Psi Rush Signup</h1>
+<h1 class="text-center">Pi Kappa Rush Signup</h1>
 
   <form id="info">
     <div class="row">
