--- a/index.html
+++ b/index.html
@@ -38,18 +38,25 @@
     </div>
   </form>
 
-  <div class="row">
-    <div class="small-6 columns">
+  <div class="row text-center">
+    <div class="small-12 columns">
       <video id="video" muted loop autoplay></video>
     </div>
-    <div class="small-6 columns">
+
+    <div class="row text-center">
+      <div class="medium-12 columns">
+        <a href="#" class="button" id="snap">Snap Photo</a>
+      </div>
+    </div>
+
+    <div class="small-12 columns">
       <canvas id="canvas" width="640" height="480"></canvas>
     </div>
   </div>
 
   <div class="row text-center">
     <div class="medium-12 columns">
-      <button id="snap">Snap Photo</button>
+      <a href="#" class="button success" id="submit">Submit</a>
     </div>
   </div>
 
