--- a/view.html
+++ b/view.html
@@ -6,7 +6,7 @@
   <script src="//www.parsecdn.com/js/parse-1.3.3.min.js"></script>
 </head>
 <body>
-
+<h1 class="text-center">Rushees</h1>
   <script src="js/retrieve.js"></script>
 </body>
 </html>
