--- a/index.html
+++ b/index.html
@@ -1,66 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset=utf-8>
-  <title>Rush Sign Up</title>
+  <meta charset="utf-8">
+  <title>Parse JavaScript Todo App</title>
   <link rel="stylesheet" href="css/foundation.css">
-  <link rel="stylesheet" href="css/gum.css">
-  <script src="//www.parsecdn.com/js/parse-1.3.3.min.js"></script>
+  <link href="css/gum.css" media="all" rel="stylesheet" type="text/css"/>
+  <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+  <script src="js/underscore.js"></script>
+  <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
+  <script src="js/rush.js"></script>
 </head>
+
 <body>
 
-<h1 class="text-center">Pi Kappa Rush Signup</h1>
+  <!-- Todo App Interface -->
 
-  <form id="info">
-    <div class="row">
-      <div class="large-12 columns">
-        <label>
-          Name:
-          <input type="text" id="name" placeholder="Name" />
-        </label>
-      </div>
+  <div id="rushsignup">
+    <div class="content">
     </div>
-    <div class="row">
-      <div class="large-12 columns">
-        <label>
-          Email:
-          <input type="text" id="email" placeholder="Email" />
-        </label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="large-12 columns">
-        <label>
-          Hometown:
-          <input type="text" id="hometown" placeholder="Hometown" />
-        </label>
-      </div>
-    </div>
-  </form>
+  </div>
 
-  <div class="row text-center">
+  <!-- Templates -->
+
+  <script type="text/template" id="login-template">
+    <header id="header"></header>
+    <div class="row">
     <div class="small-12 columns">
-      <video id="video" muted loop autoplay></video>
+        <form class="login-form">
+          <h2>Log In</h2>
+          <div class="error" style="display:none"></div>
+          <input type="text" id="login-username" placeholder="Username" />
+          <input type="password" id="login-password" placeholder="Password" />
+          <div class="text-center"><button>Log In</button></div>
+        </form>
+        </div>
+    </div>
+  </script>
+
+  <script type="text/template" id="signup-template">
+    <header id="header"></header>
+    <div class="row">
+    <div class="small-12 columns">
+      <form class="signup-form">
+        <h2>Sign Up</h2>
+        <div class="error" style="display:none"></div>
+        <input type="text" id="signup-frat-name" placeholder="Organization Name" />
+        <input type="text" id="signup-username" placeholder="Username" />
+        <input type="password" id="signup-password" placeholder="Create a Password" />
+        <div class="text-center"><button>Sign Up</button></div>
+      </form>
+      </div>
+    </div>
+  </script>
+
+  <script type="text/template" id="register-form-template">
+  <h1 class="text-center"><%= Parse.User.current().escape("org") %> Rush Signup</h1>
+    <div class="text-center" id="user-info">
+      Signed in as <%= Parse.User.current().escape("username") %> (<a href="#" class="log-out">Log out</a>)
+    </div>
+
+    <form id="info">
+      <div class="row">
+        <div class="large-12 columns">
+          <label>
+            Name:
+            <input type="text" id="name" placeholder="Name" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-12 columns">
+          <label>
+            Email:
+            <input type="text" id="email" placeholder="Email" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-12 columns">
+          <label>
+            Hometown:
+            <input type="text" id="hometown" placeholder="Hometown" />
+          </label>
+        </div>
+      </div>
+    </form>
+
+    <div class="row text-center">
+      <div class="small-12 columns">
+        <video id="video" muted loop autoplay></video>
+      </div>
+
+      <div class="row text-center">
+        <div class="medium-12 columns">
+          <a href="#" class="button" id="snap">Snap Photo</a>
+        </div>
+      </div>
+
+      <div class="small-12 columns">
+        <canvas id="canvas" width="640" height="480"></canvas>
+      </div>
     </div>
 
     <div class="row text-center">
       <div class="medium-12 columns">
-        <a href="#" class="button" id="snap">Snap Photo</a>
+        <a href="#" class="button success" id="submit">Submit</a>
       </div>
     </div>
 
-    <div class="small-12 columns">
-      <canvas id="canvas" width="640" height="480"></canvas>
-    </div>
-  </div>
+  </script>
 
-  <div class="row text-center">
-    <div class="medium-12 columns">
-      <a href="#" class="button success" id="submit">Submit</a>
-    </div>
-  </div>
-
-  <script src="js/gum.js"></script>
+  <script type="text/template" id="rush-list-template">
+    <% _.each(array, function(rushee){ %>
+      <div class="rush-card">
+        <div class="row">
+          <div class="medium-3 columns">
+            <img src="<%= rushee['fileurl'] %>">
+          </div>
+          <div class="medium-9 columns">
+            <h1><%= rushee['name'] %></h1>
+            <h6><%= rushee['email'] %></h6>
+            <h6><%= rushee['hometown'] %></h6>
+          </div>
+        </div>
+      </div>
+      <% }); %>
+  </script>
 
 </body>
+
 </html>
