--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Parse JavaScript Todo App</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link href="css/gum.css" media="all" rel="stylesheet" type="text/css"/>
-  <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+  <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
   <script src="js/underscore.js"></script>
-  <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
+  <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
   <script src="js/rush.js"></script>
 </head>
 
