--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
         </div>
       </div>
       <% }); %>
+    <div class="row text-center">
+    <a class="button tiny"id="download-csv">Download to CSV</a>
+    </div>
   </script>
 
 </body>
