link to form on view page

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
   </script>
 
   <script type="text/template" id="rush-list-template">
+    <a href="/#/form">Form</a>
     <% _.each(array, function(rushee){ %>
       <div class="rush-card">
         <div class="row">
