--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Parse JavaScript Todo App</title>
+  <title>RushTracker</title>
+  <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/foundation.css">
   <link href="css/gum.css" media="all" rel="stylesheet" type="text/css"/>
   <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
   <script src="js/underscore.js"></script>
   <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
   <script src="js/rush.js"></script>
+
 </head>
 
 <body>
@@ -23,7 +26,7 @@
   <!-- Templates -->
 
   <script type="text/template" id="login-template">
-    <header id="header"></header>
+    <header id="header">RushTracker</header>
     <div class="row">
     <div class="small-12 columns">
         <form class="login-form">
@@ -38,7 +41,7 @@
   </script>
 
   <script type="text/template" id="signup-template">
-    <header id="header"></header>
+    <header id="header">RushTracker</header>
     <div class="row">
     <div class="small-12 columns">
       <form class="signup-form">
@@ -54,10 +57,24 @@
   </script>
 
   <script type="text/template" id="register-form-template">
-  <h1 class="text-center"><%= Parse.User.current().escape("org") %> Rush Signup</h1>
-    <div class="text-center" id="user-info">
-      Signed in as <%= Parse.User.current().escape("username") %> (<a href="#" class="log-out">Log out</a>)
+  <div class="row sticky" id="header">
+    <div class="medium-10 columns">
+      <header >RushTracker</header>
     </div>
+    <div class="medium-2 columns">
+      <div class="text-center" id="user-info">
+        <%= Parse.User.current().escape("username") %><br /><a href="#" class="log-out">Log out</a>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+
+  <div class="small-12 columns text-center">
+    <h1><%= Parse.User.current().escape("org") %> Rush Signup</h1>
+  </div>
+
+  </div>
+
 
     <form id="info">
       <div class="row">
@@ -84,44 +101,65 @@
           </label>
         </div>
       </div>
+      <div class="row">
+        <div class="large-12 columns">
+          <label>
+            Phone Number:
+            <input type="text" id="phonenumber" placeholder="Phone Number" />
+          </label>
+        </div>
+      </div>
     </form>
 
-    <div class="row text-center">
+    <div id="video-div" class="row text-center">
       <div class="small-12 columns">
         <video id="video" muted loop autoplay></video>
       </div>
-
-      <div class="row text-center">
-        <div class="medium-12 columns">
-          <a href="#" class="button" id="snap">Snap Photo</a>
-        </div>
-      </div>
-
-      <div class="small-12 columns">
-        <canvas id="canvas" width="640" height="480"></canvas>
+      <div class="medium-12 columns">
+          <a class="button" id="snap">SNAP PHOTO</a>
       </div>
     </div>
 
+      <div id="canvas-div" class="row text-center hide">
+      <div class="small-12 columns">
+        <canvas id="canvas" width="640" height="480"></canvas>
+      </div>
+      <div class="medium-12 columns">
+          <a class="button" id="retake">RETAKE</a>
+      </div>
+
+      </div>
+
     <div class="row text-center">
       <div class="medium-12 columns">
-        <a href="#" class="button success" id="submit">Submit</a>
+        <a href="/#/form" class="button success" id="submit">SUBMIT</a>
       </div>
     </div>
 
   </script>
 
   <script type="text/template" id="rush-list-template">
-    <a href="/#/form">Form</a>
+    <div class="row" id="header">
+      <div class="small-9 columns">
+        <header >RushTracker</header>
+      </div>
+      <div class="small-3 columns">
+        <a href="/#/form">Back to Form</a>
+      </div>
+    </div>
     <% _.each(array, function(rushee){ %>
       <div class="rush-card">
         <div class="row">
           <div class="medium-3 columns">
             <img src="<%= rushee['fileurl'] %>">
           </div>
-          <div class="medium-9 columns">
+          <div class="medium-6 columns">
             <h1><%= rushee['name'] %></h1>
             <h6><%= rushee['email'] %></h6>
             <h6><%= rushee['hometown'] %></h6>
+          </div>
+          <div class="medium-3 columns">
+            <a class="button alert">DROP</a>
           </div>
         </div>
       </div>
