--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="small-12 medium-8 medium-offset-2 columns">
           <label>
-            Hometown:
+            Hometown, State:
             <input type="text" class="required" id="hometown" placeholder="Hometown" />
           </label>
         </div>
