--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
             <h6><%= rushee['email'] %></h6>
             <h6><%= rushee['hometown'] %></h6>
             <h6><%= rushee['phonenumber'] %></h6>
+            <h6>Tebow: <%= rushee['custom1'] %></h6>
+            <h6>Vice: <%= rushee['custom2'] %></h6>
           </div>
           <div class="medium-3 columns">
             <a class="button alert drop">DROP</a>
