added additional form quesitons

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="row">
         <div class="small-12 medium-8 medium-offset-2 columns">
           <label>
-            Email:
+            Computer ID:
             <input type="text" class="required" id="email" placeholder="Email" />
           </label>
         </div>
@@ -96,6 +96,22 @@
           <label>
             Hometown, State:
             <input type="text" class="required" id="hometown" placeholder="Hometown" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 medium-8 medium-offset-2 columns">
+          <label>
+            High School:
+            <input type="text" class="required" id="highschool" placeholder="High School" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 medium-8 medium-offset-2 columns">
+          <label>
+            Dorm, Room Number:
+            <input type="text" class="required" id="residence" placeholder="Residence" />
           </label>
         </div>
       </div>
