added additional fields to profilepage

--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
             <h1><%= rushee['name'] %></h1>
             <h6><%= rushee['email'] %></h6>
             <h6><%= rushee['hometown'] %></h6>
+            <h6><%= rushee['highschool'] %></h6>
             <h6><%= rushee['phonenumber'] %></h6>
+            <h6><%= rushee['residence'] %></h6>
             <h6>Tebow: <%= rushee['custom1'] %></h6>
             <h6>Vice: <%= rushee['custom2'] %></h6>
           </div>
