--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             <h6><%= rushee['highschool'] %></h6>
             <h6><%= rushee['phonenumber'] %></h6>
             <h6><%= rushee['residence'] %></h6>
-            <h6>Tebow: <%= rushee['custom1'] %></h6>
-            <h6>Vice: <%= rushee['custom2'] %></h6>
+            <h6><%= Parse.User.current().escape("custom1") %> <%= rushee['custom1'] %></h6>
+            <h6><%= Parse.User.current().escape("custom2") %> <%= rushee['custom2'] %></h6>
           </div>
           <div class="medium-3 columns">
             <a class="button alert drop" id="drop">DROP</a>
