--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <div class="small-12 medium-8 medium-offset-2 columns">
           <label>
             <%= Parse.User.current().escape("custom2") %>
+            <%= console.log(Parse.User.current().escape("custom2")) %>
             <input type="text" class="required" id="custom2" placeholder="" />
           </label>
         </div>
