--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <script type="text/template" id="login-template">
     <div class="nav" id="header">
         <div class="small-6 columns">
-            <header >RushTracker</header>
+            <header><img src="images/logo_small_alt.png"></header>
         </div>
     </div>
     <div class="row">
@@ -49,7 +49,7 @@
   <script type="text/template" id="org-signup-template">
     <div class="nav" id="header">
         <div class="small-6 columns">
-            <header >RushTracker</header>
+            <header><img src="images/logo_small_alt.png"></header>
         </div>
     </div>
     <div class="row">
@@ -69,7 +69,7 @@
   <script type="text/template" id="member-signup-template">
     <div class="nav" id="header">
         <div class="small-6 columns">
-            <header >RushTracker</header>
+            <header><img src="images/logo_small_alt.png"></header>
         </div>
     </div>
     <div class="row">
@@ -89,7 +89,7 @@
   <script type="text/template" id="register-form-template">
       <div class="nav" id="header">
           <div class="small-6 columns">
-              <header >RushTracker</header>
+              <header ><img src="images/logo_small_alt.png"></header>
           </div>
           <div class="small-6 columns">
               <ul class="right">
@@ -266,7 +266,7 @@
   <script type="text/template" id="rush-profile-template">
       <div class="nav" id="header">
         <div class="small-6 columns">
-            <header >RushTracker</header>
+            <header ><img src="images/logo_small_alt.png"></header>
         </div>
     </div>
     <div>
