--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>RushTracker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Helios</title>
   <link href='//fonts.googleapis.com/css?family=Josefin+Slab:700' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/foundation-icons.css" />
