--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <form class="login-form">
             <h2>Log In</h2>
             <div class="error" style="display:none"></div>
-            <input type="text" id="login-username" placeholder="Username" />
+            <input type="text" autocorrect="off" autocapitalize="off" id="login-username" placeholder="Username" />
             <input type="password" id="login-password" placeholder="Password" />
             <div class="text-center"><button>Log In</button></div>
           </form>
@@ -61,7 +61,7 @@
           <h2>Sign Up</h2>
           <div class="error" style="display:none"></div>
           <input type="text" id="signup-frat-name" placeholder="Organization Name" />
-          <input type="text" id="signup-username" placeholder="Username" />
+          <input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Username" />
           <input type="password" id="signup-password" placeholder="Create a Password" />
           <div class="text-center"><button>Sign Up</button></div>
         </form>
@@ -81,7 +81,7 @@
           <h2><%= orgName %> Sign Up</h2>
           <div class="error" style="display:none"></div>
           <input type="text" id="signup-member-name" placeholder="Name" />
-          <input type="text" id="signup-username" placeholder="Username" />
+          <input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Username" />
           <input type="password" id="signup-password" placeholder="Create a Password" />
           <div class="text-center"><button>Sign Up</button></div>
         </form>
