--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
   <title>Helios</title>
+<script src="js/responsive-nav.js"></script>
   <link href='//fonts.googleapis.com/css?family=Josefin+Slab:700' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/foundation-icons.css" />
@@ -13,6 +14,7 @@
   <script src="js/underscore.js"></script>
   <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
   <script src="js/rush.js"></script>
+  <link rel="stylesheet" href="css/responsive-nav.css">
 
 </head>
 
@@ -191,8 +193,7 @@
 </script>
 
   <script type="text/template" id="dashboard-template">
-    <div class="contain-to-grid">  
-      <div class="nav" id="header">
+    <div class="nav show-for-medium-up" id="header">
         <div class="small-8 medium-4 columns">
           <header><img src="images/logo_small_alt.png"></header>
         </div>
@@ -204,7 +205,17 @@
           </ul>
         </div>
       </div>
-    </div>
+
+<div class="nav-mobile-container">
+  <nav class="nav nav-collapse hide-for-medium-up">
+          <ul>
+            <li><a id="download-csv">Get CSV</a></li>
+            <li><a id="back-to-form" href="/#/form/<%=orgid%>">Back to Form</a></li>
+            <li><a href="#" class="log-out">Log out</a></li>
+          </ul>
+    </nav>
+</div>
+
     <div class="row text-center">
       <ul class="button-group">
         <li class="button secondary" id="dropped-button">DROPPED</li>
