working mobile menu

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
         </div>
       </div>
 
-<div class="nav-mobile-container">
+<div class="row nav-mobile-container">
+  <img src="images/logo_small_alt.png">
   <nav class="nav nav-collapse hide-for-medium-up">
           <ul>
             <li><a id="download-csv">Get CSV</a></li>
