working mobile menu for real

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
         </div>
       </div>
 
-<div class="row nav-mobile-container">
+<div class="row nav-mobile-container hide-for-medium-up">
   <img src="images/logo_small_alt.png">
-  <nav class="nav nav-collapse hide-for-medium-up">
+  <nav class="nav nav-collapse">
           <ul>
             <li><a id="download-csv">Get CSV</a></li>
             <li><a id="back-to-form" href="/#/form/<%=orgid%>">Back to Form</a></li>
